Fixed alert flickering issue, removed pointless id names from elements

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 .container {
-  max-width: 600px;
+  max-width: 700px;
+  padding: 1rem 5rem;
   margin: 0 auto;
 }
 
